# SCA-reachability-vuln-agents

./: .gitignore  CONTRIBUTING.md  Dockerfile.analysis  Dockerfile.orchestrator  Dockerfile.scanner  LICENSE  README.md  SECURITY.md  conftest.py  otel-collector-config.yaml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
scripts/: build_and_push.ps1  build_and_push.sh  set_env.ps1
src/agents/: __init__.py  analysis.py  analysis_handler.py  orchestrator.py  scanner.py  startup.py
src/cli/: auth_flow.py  formatting.py  main.py  workflows.py
src/core/: alarm_logic.py  config.py  constants.py  correlation.py  identity_context.py  jwt_validation.py  masking.py  metrics.py  models.py  pkce.py  retry.py  scope_logic.py  structured_logging.py  telemetry.py  token_refresh.py
src/sca/: call_graph.py  fix_recommendations.py  manifest_parser.py  models.py  sbom_generator.py  scoring.py
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/bootstrap/: main.tf
tests/integration/: test_mtls_delegation.py  test_oauth_flows.py  test_pipeline.py
tests/properties/: __init__.py  test_alarm_logic_props.py  test_cli_step_labeling_props.py  test_config_props.py  test_correlation_props.py  test_fix_recommendations_props.py  test_identity_context_props.py  test_jwt_validation_props.py  test_masking_props.py  test_metrics_props.py  test_retry_props.py  test_sbom_props.py  test_scope_logic_props.py  test_scoring_props.py  test_strategies_sanity.py  test_structured_logging_props.py  test_telemetry_props.py  (+1 more)
(+41 files in other folders)
