[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore-reachability-sca"
version = "0.1.0"
description = "Multi-agent security platform performing reachability-enhanced SCA using Amazon Bedrock AgentCore Identity"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-sdk-extension-aws>=2.0.0",
    "opentelemetry-propagator-aws-xray>=1.0.0",
    "tree-sitter>=0.21.0",
    "cyclonedx-python-lib>=6.0.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
sca-demo = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
